[package]
name = "flist-russian-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"

# Здесь самое важное: правильные названия без лишних подчеркиваний
[dependencies.web-sys]
version = "0.3"
features = [
  "Storage",
  "Window",
  "LocalStorage"
]
