[package]
name = "flist-russian-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlDocument",
  "Location",
  "MessageEvent",
  "Element",
  "Reflect"
]
